// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `null`;

exports[`renders accepted protection request 1`] = `
<ProtectionRecoveryRequest
  type="accepted"
/>
`;

exports[`renders pending protection request 1`] = `
<ProtectionRecoveryRequest
  type="pending"
/>
`;

exports[`renders protected and claimed 1`] = `<RecoveryProcess />`;

exports[`renders protected but not claimed 1`] = `
<ProtectionRecoveryRequest
  type="activated"
/>
`;
